# substrate

./: .gitignore  .gitmodules  README.md  notes.md  package-lock.json  settings.json
.github/: README.md  notes.md
.github/workflows/: deta-space.yaml  frontend.yaml  frontend.yml  node.js.yml  pip-package.yaml  supabase.yaml
aws/: README.md
cli/: .gitignore  Dockerfile  Dockerfile copy  README.dev.md  README.md  aws.tf  environment.yml  main.py  project.py  pyproject.toml  requirements.txt
cli/code/: main.py
cli/old/: Dockerfile copy 2
cli/src/: __main__.py  cli.py  utils.py
cli/src/clients/: AWSClient.py  AWS_Client.py  DockerClient.py  EnvdClient.py  GCP_client.py  HttpClient.py  JobClient.py  SetupClient.py
cli/src/resources/: Dockerfile  check_gpu.py  substrate.dev.yaml
cli/src/utils/: check_update.py  supabase.py  utils.py
docs/: CNAME  index.html  introduction.mdx  mint.json
docs/essentials/: introduction.mdx  quickstart.mdx
documentation/: README.md
documentation/essentials/: introduction.mdx  quickstart.mdx  references.mdx
envd/: .gitignore  KJ.md  main.py
envd/buildkit/: Dockerfile  README.MD  buildkitd.toml  compose.yaml
envd/envd-quickstart/: README.md  build.envd  demo.py
envd/gcp-client-python/: README.md  test.py
examples/: 3.10  README.md  build.envd  main.py  requirements.txt  substrate.yaml
examples/basic/: README.md  main.py  substrate.yaml
examples/cuda_available/: main.py
examples/hf_text_generation/: main.py
examples/hf_text_to_image/: main.py  requirements.txt  substrate.yaml
examples/pytorch-quickstart/: main.py
frontend/: .infisical.json  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/blog/: .eslintrc  package-lock.json  package.json  sanity.cli.ts  sanity.config.ts
frontend/blog/schemas/: author.ts  blockContent.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: payment.ts  token.ts
frontend/src/assets/: TorusLogo.tsx
frontend/src/component/: Hero.tsx  Navbar.tsx  Torus3D.tsx
frontend/src/components/: ConfirmDialog  ConfirmDialog.tsx  Footer.tsx  InputForm.tsx  Logo.tsx  MainNavigation.tsx  MainNavigationBar.tsx  PricingTable.tsx  ProtectedRoute.tsx  ReadOnlyInput.tsx  RootLayout.tsx  SidebarNav.tsx  Subscription.tsx
frontend/src/config/: sanity-client.ts  supabase-client.ts
frontend/src/contexts/: UserAuthContext.tsx
frontend/src/hooks/: Auth.tsx  useAuth.tsx  useSupabase.tsx
frontend/src/page/: AuthPage.tsx  LandingPage.tsx  PricingPage.tsx
frontend/src/pages/: AuthPage.tsx  Blog.tsx  BlogPost.tsx  Checkout.tsx  Dashboard.tsx  Help.tsx  Login.tsx  PageNotFound.tsx  Pricing.tsx  Welcome.tsx  (+1 more)
gpu/: Dockerfile  README.md
lago/: .env.example  KJ.md  README.md  docker-compose.prod.yml  docker-compose.yml  start.sh
lago/extra/: init-letsencrypt.sh  nginx-letsencrypt.conf
old_frontend_useless/: App.tsx  main.tsx
old_frontend_useless/component/: Hero.tsx  Navbar.tsx  ProtectedRoute.tsx  RootLayout.tsx
old_frontend_useless/page/: AuthPage.tsx  DashboardPage.tsx  DocsPage.tsx  LandingPage.tsx
old_frontend_useless/supabase/: AuthProvider.tsx  SupabaseClient.tsx
pip-package/: README.dev.md  pyproject.toml  requirements.txt  setup.cfg
pip-package/src/: __init__.py  __main__.py
pip-package/src/clients/: AWSClient.py  DockerClient.py  GCPClient.py  HttpClient.py  JobClient.py  JobStateMachine.py  SetupClient.py
pip-package/src/filesystem/: SubstrateFilesystem.py
pip-package/src/resources/: Dockerfile  Dockerfile copy  Dockerfile.substrate-ai  substrate.dev.yaml
pip-package/src/substrate/: __init__.py
pip-package/src/utils/: check_update.py  supabase.py
python-backend/: .gitignore  README.MD  Spacefile  environment.yaml  main.py  ruff.toml
python-backend/src/: config.py  main.py  requirements.txt
substrate-cli/: Notes.md  README.md  pyproject.toml
substrate-cli/old/: Dockerfile copy  Dockerfile copy 3 latest
substrate-cli/src/: __main__.py  cli.py  client.py  old.py  tail.py  utils.py
substrate-cli/src/clients/: DockerClient.py  JobClient.py  SetupClient.py
substrate-cli/src/resources/: Dockerfile  requirements.txt
supabase/: .gitignore  README.md  config.toml  seed.sql
supabase/functions/: import_map.json
(+71 files in other folders)
